<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonarsource.parent</groupId>
    <artifactId>parent</artifactId>
    <version>83.0.0.2369</version>
  </parent>
  
  <groupId>org.sonarsource.update-center</groupId>
  <artifactId>sonar-update-center</artifactId>
  <version>1.36-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Sonar :: Update Center</name>
  <url>http://www.sonarsource.org</url>
  <inceptionYear>2010</inceptionYear>
  <description>SonarSource Update Center</description>

  <organization>
    <name>SonarSource</name>
    <url>http://www.sonarsource.com</url>
  </organization>

  <licenses>
    <license>
      <name>LGPL v.3</name>
      <url>http://www.gnu.org/licenses/lgpl.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>simon.brandhof</id>
      <name>Simon Brandhof</name>
      <email>simon.brandhof@sonarsource.com</email>
      <organization>SonarSource</organization>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <id>julien.lancelot</id>
      <name>Julien Lancelot</name>
      <email>julien.lancelot@sonarsource.com</email>
      <organization>SonarSource</organization>
      <timezone>+1</timezone>
    </developer>
  </developers>

  <properties>
    <maven.compiler.release>17</maven.compiler.release>
    <gitRepositoryName>sonar-update-center</gitRepositoryName>
    <artifactsToDownload>${project.groupId}:sonar-update-center-common:jar,${project.groupId}:sonar-update-center-mojo:jar</artifactsToDownload>
    <doclint>none</doclint>
    <license.name>GNU LGPL v3</license.name>
    <sonarVersion>5.1</sonarVersion>
    <sonar.organization>sonarsource</sonar.organization>
    <sonar.projectKey>org.sonarsource.update-center:sonar-update-center</sonar.projectKey>
  </properties>

  <modules>
    <module>sonar-update-center-common</module>
    <module>sonar-update-center-mojo</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:SonarSource/sonar-update-center.git</connection>
    <developerConnection>scm:git:git@github.com:SonarSource/sonar-update-center.git</developerConnection>
    <url>https://github.com/SonarSource/sonar-update-center</url>
    <tag>HEAD</tag>
  </scm>

  <issueManagement>
    <system>jira</system>
    <url>https://jira.sonarsource.com/browse/UPC/</url>
  </issueManagement>


  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-plugin-api</artifactId>
        <version>3.9.11</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.plugin-tools</groupId>
        <artifactId>maven-plugin-annotations</artifactId>
        <version>3.11.0</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.update-center</groupId>
        <artifactId>sonar-update-center-common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.14.0</version>
      </dependency>
      <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
          <version>3.18.0</version>
      </dependency>
      <dependency>
        <groupId>org.freemarker</groupId>
        <artifactId>freemarker</artifactId>
        <version>2.3.28</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>2.8.9</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.7.25</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>1.7.25</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>3.0.2</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.1</version>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.22.0</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>2.28.2</version>
      </dependency>
      <dependency>
        <groupId>org.skyscreamer</groupId>
        <artifactId>jsonassert</artifactId>
        <version>1.5.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <source>17</source>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
